java 1.4 compatibility